--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,12 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: #000; /* Черный фон */
-  color: #fff; /* Белый текст */
+  background-color: #000; /* черный */
+  color: #fff; /* белый */
 }
 
 .header {
-  background-color: #000; /* Темно-серый фон шапки */
+  background-color: #000;
   padding: 20px 40px;
   display: flex;
   justify-content: space-between;
@@ -20,19 +20,18 @@ body {
 
 
 .header .logo h1 {
-  /*font-size: 2.5em;*/
   margin: 0;
-  color: #fff; /* Белый текст */
+  color: #fff;
 }
 
 .header .since {
   font-size: 14px;
-  color: #aaa; /* Светло-серый текст */
+  color: #aaa;
 }
 
 .header .contact {
   font-size: 14px;
-  color: #aaa; /* Светло-серый текст */
+  color: #aaa;
   text-decoration: none;
 }
 
@@ -56,22 +55,13 @@ body {
   border-radius: 5px;
 }
 
-#header-nav {
-  background-color: #FFC0CB;
-  border-radius: 0;
-  border: 0;
-}
-
 .navbar-brand {
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 100%;
 }
-.left-text {
-  font-size: 1em;
-  color: palevioletred;
-}
+
 
 /* Логотип и название "Louvre" по центру */
 .center-text {
